<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App_test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="poids">Poids :</string>
    <string name="hint_poids">Poids</string>
    <string name="result">Vous devez cliquer sur le bouton « Calculer l\'IMC » pour obtenir un résultat.</string>
    <string name="resultat">\n<b><u>Résultat :</u></b>\n</string>
    <string name="raz">Remise à zéro</string>
    <string name="calcul">Calculer l\'IMC</string>
    <string name="mega">Méga fonction</string>
    <string name="xiii">XIII</string>
    <string name="cm">Centimètre</string>
    <string name="m">Mètre</string>
    <string name="taille">Taille :</string>
    <string name="hint_taille">Taille</string>
    <string name="b_imc">IMC</string>
    <string name="b_nfc">NFC</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="nfc_page">Page NFC</string>
    <string name="imc_page">Page IMC</string>
    <string name="b_read">Lecture</string>
    <string name="b_write">Ecriture</string>
    <string name="q_read">Tag trouvé ?&#160;</string>
    <string name="r_read"></string>
    <string name="message">Message :&#160;</string>
    <string name="nfc_message"></string>
    <string name="id_nfc_hex"></string>
    <string name="id_nfc_dec"></string>
    <string name="nfc_id_hex">NFC ID (HEX) :&#160;</string>
    <string name="nfc_id_dec">NFC ID (DEC) :&#160;</string>
    <string name="nfc_type">Type :&#160;</string>
    <string name="r_nfc_type"></string>
    <string name="nfc_id_bytes">NFC ID (BYTES) :&#160;</string>
    <string name="id_nfc_bytes"></string>

</resources>
