<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:orientation="vertical">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:text="@string/nfc_type"
          android:textStyle="bold"
          android:textColor="#FF0000"
          android:gravity="center"/>
        <TextView 
          android:id="@+id/r_nfc_type"
		  android:layout_width="fill_parent"
      	  android:layout_height="fill_parent" 
    	  android:text="@string/r_nfc_type"/>
	</LinearLayout>
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:text="@string/q_read"
          android:textStyle="bold"
          android:textColor="#FF0000"
          android:gravity="center"/>
        <TextView 
          android:id="@+id/r_read"
		  android:layout_width="fill_parent"
      	  android:layout_height="fill_parent" 
    	  android:text="@string/r_read"/>
	</LinearLayout>
	  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:text="@string/message"
          android:textStyle="bold"
          android:textColor="#FF0000"
          android:gravity="center"/>
        <TextView 
          android:id="@+id/nfc_message"
		  android:layout_width="fill_parent"
      	  android:layout_height="fill_parent" 
    	  android:text="@string/nfc_message"/>
	</LinearLayout>
	  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:text="@string/nfc_id_hex"
          android:textStyle="bold"
          android:textColor="#FF0000"
          android:gravity="center"/>
        <TextView 
          android:id="@+id/id_nfc_hex"
		  android:layout_width="fill_parent"
      	  android:layout_height="fill_parent" 
    	  android:text="@string/id_nfc_hex"/>
	</LinearLayout>
		  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="fill_parent"
          android:text="@string/nfc_id_dec"
          android:textStyle="bold"
          android:textColor="#FF0000"
          android:gravity="center"/>
        <TextView 
          android:id="@+id/id_nfc_dec"
		  android:layout_width="fill_parent"
      	  android:layout_height="fill_parent" 
    	  android:text="@string/id_nfc_dec"/>
	</LinearLayout>
</LinearLayout>